--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,64 +10,37 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/cns_layout_navigation_buttons"
 
         />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     android:id="@+id/cns_layout_navigation_buttons"
     android:background="@android:color/black"
     >
-<!--    <ImageView-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:padding="4dp"-->
-<!--        android:id="@+id/iv_front_arrow"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/adView"-->
-<!--        android:src="@drawable/button_arrow_right"-->
-<!--        android:contentDescription="@string/next_arrow_content"-->
-<!--        android:visibility="gone"-->
-<!--        android:nextFocusForward="@+id/iv_back_arrow"-->
 
-
-<!--        />-->
-
-<!--    <ImageView-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:padding="4dp"-->
-<!--        android:id="@+id/iv_back_arrow"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/adView"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--       android:src="@drawable/button_arrow_left"-->
-<!--        android:contentDescription="@string/back_arrow_content"-->
-<!--        android:visibility="gone"-->
-<!--        android:nextFocusForward="@+id/iv_front_arrow"-->
-
-<!--        />-->
-
-
-
-    <com.google.android.gms.ads.AdView
+        <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="SMART_BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
         ads:layout_constraintStart_toStartOf="parent"
+        ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:contentDescription="@string/AdView_content_description"
 
