--- a/app/src/main/res/values-land-1080x2160/dimens.xml
+++ b/app/src/main/res/values-land-1080x2160/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="label_intro_margin_top">24dp</dimen>
     <dimen name="search_query_margin_top">24dp</dimen>
+
+<!--    DetailActivity-->
+    <dimen name="detail_group_margin_start">48dp</dimen>
 </resources>
