--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -125,7 +125,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/label_date"
                     app:layout_constraintBottom_toBottomOf="parent"
-
+                    android:layout_marginEnd="@dimen/description_text_margin_end"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/detail_body_text_size"
                     android:textColor="@color/detail_text_color"
