--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,7 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
 
     <!--    SpaceDetailActivity-->
     <dimen name="detail_group_margin_start">12dp</dimen>
+    <dimen name="description_text_margin_end">8dp</dimen>
     <dimen name="label_creator_width_percent">0.45</dimen>
     <dimen name="tv_creator_width_percent">0.40</dimen>
     <dimen name="detail_label_text_size">17sp</dimen>
