font size changed for better appearnace

--- a/app/src/main/res/layout-land/fragment_search.xml
+++ b/app/src/main/res/layout-land/fragment_search.xml
@@ -22,7 +22,7 @@
                 android:padding="@dimen/label_intro_padding"
                 android:text="@string/introduction"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textSize="@dimen/title_text_size"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_error_msg"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +41,7 @@
                 android:text="@string/label_query"
                 android:textAlignment="viewEnd"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/et_query_input"
                 app:layout_constraintHorizontal_chainStyle="packed"
@@ -67,7 +67,7 @@
                 android:nextFocusForward="@+id/et_start_year_input"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/hint_color"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@+id/label_query"
                 app:layout_constraintEnd_toStartOf="@+id/label_start_year"
                 app:layout_constraintStart_toEndOf="@+id/label_query"
@@ -86,7 +86,7 @@
                 android:text="@string/label_start_year"
                 android:textAlignment="viewEnd"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintEnd_toStartOf="@id/et_start_year_input"
                 app:layout_constraintStart_toEndOf="@+id/et_query_input"
                 app:layout_constraintTop_toTopOf="@+id/label_query"
@@ -106,7 +106,7 @@
                 android:nextFocusForward="@+id/et_end_year_input"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/hint_color"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/label_start_year"
                 app:layout_constraintEnd_toStartOf="@id/label_end_year"
                 app:layout_constraintStart_toEndOf="@+id/label_start_year"
@@ -125,7 +125,7 @@
                 android:text="@string/label_end_year"
                 android:textAlignment="viewEnd"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/label_start_year"
                 app:layout_constraintEnd_toStartOf="@id/et_end_year_input"
                 app:layout_constraintStart_toEndOf="@+id/et_start_year_input"
@@ -146,7 +146,7 @@
                 android:nextFocusForward="@+id/button_search"
                 android:textColor="@android:color/white"
                 android:textColorHint="@color/hint_color"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/label_end_year"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/label_end_year"
@@ -165,8 +165,7 @@
                 android:nextFocusUp="@id/et_query_input"
                 android:text="@string/button_search_text"
                 android:textColor="@drawable/button_text_color"
-
-                android:textSize="17sp"
+                android:textSize="@dimen/search_button_text_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/label_start_year" />
@@ -192,7 +191,7 @@
                 android:padding="12dp"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
