--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,7 +28,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/tv_error_msg"
                 app:layout_constraintVertical_bias="@dimen/label_intro_vertical_bias"
                 android:textColor="@android:color/white"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+               android:textSize="@dimen/title_text_size"
                 android:textAlignment="center"
 
                 />
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                 android:text="@string/label_query"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 android:textAlignment="viewEnd"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_intro"
@@ -63,7 +63,7 @@
                 android:textColorHint="@color/hint_color"
                 android:inputType="textVisiblePassword"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@+id/label_query"
                 app:layout_constraintTop_toTopOf="@+id/label_query"
                 app:layout_constraintStart_toEndOf="@+id/label_query"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                 android:text="@string/label_start_year"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 android:textAlignment="viewEnd"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_query"
@@ -102,7 +102,7 @@
                 android:hint="@string/start_year_text"
                 android:inputType="date"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/label_start_year"
                 app:layout_constraintStart_toEndOf="@+id/label_start_year"
                 app:layout_constraintTop_toTopOf="@+id/label_start_year"
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintWidth_percent="@dimen/search_criteria_label_width_constraint"
                 android:text="@string/label_end_year"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 android:textAlignment="viewEnd"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_start_year"
@@ -142,7 +142,7 @@
                 android:hint="@string/end_year_text"
                 android:inputType="date"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 app:layout_constraintBottom_toBottomOf="@id/label_end_year"
                 app:layout_constraintStart_toEndOf="@+id/label_end_year"
                 app:layout_constraintTop_toTopOf="@+id/label_end_year"
@@ -167,7 +167,7 @@
                 android:nextFocusUp="@id/et_query_input"
                 android:text="@string/button_search_text"
                 android:textColor="@drawable/button_text_color"
-                android:textSize="17sp"
+                android:textSize="@dimen/search_button_text_size"
 
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -195,7 +195,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:gravity="center_horizontal"
                 app:layout_constraintTop_toBottomOf="@+id/button_search"
-                android:textSize="18sp"
+                android:textSize="@dimen/query_label_text_size"
                 android:layout_marginTop="@dimen/error_msg_margin_top"
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
