--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,10 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <dimen name="label_intro_vertical_bias">.15</dimen>
     <dimen name="label_query_vertical_bias">.20</dimen>
 
+<!--    fragment_Search-->
+    <dimen name="title_text_size">17sp</dimen>
+    <dimen name="query_label_text_size">17sp</dimen>
+    <dimen name="search_button_text_size">15sp</dimen>
 
 
 
@@ -33,10 +37,10 @@ http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     <dimen name="detail_group_margin_start">12dp</dimen>
     <dimen name="description_text_margin_end">8dp</dimen>
     <dimen name="label_creator_width_percent">0.45</dimen>
-    <dimen name="tv_creator_width_percent">0.40</dimen>
-    <dimen name="detail_label_text_size">17sp</dimen>
-    <dimen name="detail_body_text_size">17sp</dimen>
-
+    <dimen name="tv_creator_width_percent">0.50</dimen>
+    <dimen name="detail_label_text_size">16sp</dimen>
+    <dimen name="detail_body_text_size">15sp</dimen>
+    <dimen name="detail_title_text_size">16sp</dimen>
 
 
 </resources>
